--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,4 @@
-buildscript {
-    repositories {
-        mavenCentral()
-    }
-    dependencies {
-        classpath("org.junit.platform:junit-platform-gradle-plugin:1.2.0")
-    }
-}
-
-
-group 'club.oobootcamp'
+group 'cc.oobootcamp'
 version '1.0-SNAPSHOT'
 
 apply plugin: 'java'
